--- a/examples/examples_1D/01_linearadvection/TODO.txt
+++ b/examples/examples_1D/01_linearadvection/TODO.txt
@@ -1,4 +1,3 @@
-create haiku implementation of mcTangent
-use haiku mcTangent in mcTangentNN.py
-create way for mcTangent params and network architecture to be automatically added to buffer_dcit in initializer.py
-create dict of NNs for easy setup in case.json
+08 12 2022:
+
+Troubleshoot parallel execution
