--- a/examples/examples_1D/01_linearadvection/TODO.txt
+++ b/examples/examples_1D/01_linearadvection/TODO.txt
@@ -1,5 +1,3 @@
-15 12 2022:
+11 1 2022:
 
-Work out OOM errors
-- smaller batches? (batch sequences within sample)
-- mixed precision
+Rewrite mcTangent to only use mean(consL,consR) as input
