--- a/report/preamble.sty
+++ b/report/preamble.sty
@@ -1,10 +1,5 @@
-\NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{wglao_preamble}
+\ProvidesPackage{preamble}
 
-\documentclass{article}
-\usepackage{subfigure}
-\usepackage{wrapfig}
-\usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{fancyhdr}
 \usepackage{amsmath}
@@ -22,7 +17,7 @@
 \usepackage{multirow}
 \usepackage{enumitem}
 \usepackage{listings}
+\usepackage{inputenc}
 \usepackage{biblatex}
 \usepackage{import}
 \usepackage[margin=1cm]{caption}
-\usepackage[utf8]{inputenc}
