--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1,4 +1,4 @@
-@article{bezgin_jax-fluids_2023,
+@article{bezgin22,
 	title = {{JAX}-{FLUIDS}: {A} fully-differentiable high-order computational fluid dynamics solver for compressible two-phase flows},
 	volume = {282},
 	issn = {00104655},
