--- a/report/preamble.sty
+++ b/report/preamble.sty
@@ -18,6 +18,7 @@
 \usepackage{enumitem}
 \usepackage{listings}
 \usepackage{inputenc}
-\usepackage{biblatex}
+\usepackage[backend=biber,style=numeric]{biblatex}
+\addbibresource{refs.bib}
 \usepackage{import}
 \usepackage[margin=1cm]{caption}
